@@ -31,7 +31,7 @@
 
 package io.grpc.benchmarks;
 
-import static io.grpc.testing.TestUtils.pickUnusedPort;
+import static io.grpc.benchmarks.Utils.pickUnusedPort;
 
 import com.google.protobuf.ByteString;
 
@@ -124,7 +124,7 @@ public class TransportBenchmark {
 
         // Reflection used since they are only available on linux.
         Class<?> groupClass = Class.forName("io.netty.channel.epoll.EpollEventLoopGroup");
-        EventLoopGroup group = (EventLoopGroup) groupClass.newInstance();
+        EventLoopGroup group = (EventLoopGroup) groupClass.getConstructor().newInstance();
 
         @SuppressWarnings("unchecked")
         Class<? extends ServerChannel> serverChannelClass = (Class<? extends ServerChannel>)
@@ -163,7 +163,7 @@ public class TransportBenchmark {
     }
 
     server = serverBuilder
-        .addService(BenchmarkServiceGrpc.bindService(new AsyncServer.BenchmarkServiceImpl()))
+        .addService(new AsyncServer.BenchmarkServiceImpl())
         .build();
     server.start();
     channel = channelBuilder.build();
